[project]
name = "metaforms-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator>=0.32.0",
    "groq>=0.30.0",
    "jsonschema>=4.25.0",
    "llama-index>=0.13.0",
    "llama-index-embeddings-fastembed>=0.4.0",
    "llama-index-readers-file>=0.5.0",
    "llama-index-vector-stores-qdrant>=0.7.1",
    "qdrant-client[fastembed]>=1.15.1",
    "rich>=14.1.0",
    "streamlit>=1.47.1",
]
